# prosze-hackowac

./: Cargo.toml  Dockerfile  README.md  compose.yml
src/: main.rs
static/: index.html
