[package]
name = "prosze-hackowac"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
async-signal = "0.2"
futures-util = "0.3"
image = "0.25"
poem = { version = "3.1", features = ["static-files"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["rt-multi-thread"] }
